<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.bricenangue.insyconn.ki_ki.FragmentMyKiKi"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout_profile">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imageView_mykiki_userpic"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_margin="15dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/com_facebook_profile_picture_blank_square"
            app:civ_border="true"
            app:civ_border_color="#ffff"
            app:civ_border_width="0dp" />

        <TextView
            android:id="@+id/textView_mykiki_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Username"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linearLayout_profile"
        android:background="@color/grey_light"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/divider_userprofile"/>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_userprofile"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_mykiki_mydata"
                android:id="@+id/textView_mydata"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/textView_mydata"
                android:layout_marginTop="10dp"
                android:id="@+id/linearLayout_mydata">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_gender"
                        android:text="@string/button_gender_text"
                        android:maxWidth="50dp"
                        android:textAllCaps="false"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_age"
                        android:text="@string/button_age_text"
                        android:maxWidth="50dp"
                        android:textAllCaps="false"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:gravity="center">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_size"
                        android:text="@string/button_size_text"
                        android:maxWidth="50dp"
                        android:textAllCaps="false"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_weight"
                        android:text="@string/button_weight_text"
                        android:maxWidth="50dp"
                        android:textAllCaps="false"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/linearLayout_mydata"
                android:background="@color/grey_light"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:id="@+id/divider_mydata"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_mykiki_myactivities"
                android:id="@+id/textView_myactivities"
                android:layout_below="@+id/divider_mydata"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/textView_myactivities"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/linearLayout_activities">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/imageView_activity_level_1"
                    android:src="@drawable/ic_walking_grey"
                    android:background="#fff"/>
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/imageView_activity_level_2"
                    android:src="@drawable/ic_squat_grey"
                    android:background="#fff"/>
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/imageView_activity_level_3"
                    android:src="@drawable/ic_runner_grey"
                    android:background="#fff"/>
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/imageView_activity_level_4"
                    android:src="@drawable/ic_lifting_grey"
                    android:background="#fff"/>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_mykiki_myactivities_description"
                android:id="@+id/textView_myactivities_description"
                android:layout_below="@+id/linearLayout_activities"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/textView_myactivities_description"
                android:background="@color/grey_light"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/divider_activities_descriptions"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/divider_activities_descriptions">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_mykiki_recommended_calories"
                    android:id="@+id/textView_recommended_calories_label"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to_maintain_weight"
                            android:id="@+id/textView_recommended_calories_sub_label"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" "
                            android:id="@+id/textView_recommended_calories"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to_loose_weight"
                            android:id="@+id/textView_calories_to_loose_weight_label"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" "
                            android:id="@+id/textView_calories_to_loose_weight"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>



        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
